--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
 
         <div class="form-item">
-          <label for="insensity" class="primary">Training Intensity</label>
-          <select id="insensity">
+          <label for="intensity" class="primary">Training Intensity</label>
+          <select id="intensity">
             <option value="" disabled selected></option>
             <option value="High">High</option>
             <option value="Medium">Medium</option>
