trying to get the images to work

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div>
           <input type="radio" id="bjj" name="drone" value="bjj" checked>
              <label for="bjj">BJJ</label>
-      
-          <input type="radio" id="wrestling" name="drone" value="wresling">
+
+          <input type="radio" id="wrestling" name="drone" value="wrestling">
           <label for="wrestling">Wrestling</label>
 
           <input type="radio" id="boxing" name="drone" value="boxing">
@@ -26,6 +26,7 @@
         <div>
           <button type="submit">Submit</button>
         </div>
+        <img src="" id="picture" width=600px>
     </form>
     <form id="new-item-form">
       <div id="form-wrapper">
