--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+
       <form id="initial-form">
         <p>Select your favourite Workout:</p>
 
         <div>
           <input type="radio" id="bjj" name="drone" value="bjj" checked>
-             <label for="bjj">BJJ</label>
+          <label for="bjj">BJJ</label>
 
           <input type="radio" id="wrestling" name="drone" value="wrestling">
           <label for="wrestling">Wrestling</label>
@@ -26,9 +27,9 @@
         <div>
           <button type="submit">Submit</button>
         </div>
-        <img src="" id="picture" width=600px>
     </form>
     <form id="new-item-form">
+      <img src="" id="picture">
       <div id="form-wrapper">
         <div class="form-item">
           <label for="training" class="primary">Training</label>
@@ -64,5 +65,6 @@
     <div id="training-list"></div>
   </body>
   <footer>
+
   </footer>
 </html>
